[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylib0-xmzt"
version = "0.0.1"
authors = [ 
  { name="xmzt", email="117325034+xmzt@users.noreply.github.com" }
]
description = "xmzt base python library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xmzt/pylib0"
